--- a/wp-content/themes/chicdressing/style.css
+++ b/wp-content/themes/chicdressing/style.css
@@ -14,23 +14,36 @@ Text Domain:	 chicdressing
     Add your custom styles here
 */
 
+/* Ajout local google fonts */
+@import url('assets/fonts/Kalam/font.css');
+@import url('assets/fonts/Open_Sans/font.css');
+@import url('assets/fonts/Playfair_Display/font.css');
 
-body .page-content, .page-content select, .page-content input, .page-content textarea, .page-content .post-author a, .page-content .ashe-widget a, .page-content .comment-author {
-    color: #a5a5a5;
-    font-size: 12px;
+
+body .page-content,
+.page-content select,
+.page-content input,
+.page-content textarea,
+.page-content .post-author a,
+.page-content .ashe-widget a,
+.page-content .comment-author {
+    color: #4d4d4d;
+    /* modif: couleur pas suffisamment contrastée */
+    font-size: 14px;
 }
 
 
-body .header-logo a{
+body .header-logo a {
     color: white;
     text-shadow: 2px 3px 5px #d0527a;
     transform: rotate(-9deg);
 }
-.text-center{
-    text-align:center;
+
+.text-center {
+    text-align: center;
 }
 
-.chic-bouton{
+.chic-bouton {
     color: #ffffff;
     background-color: #333333;
     font-weight: bold;
@@ -43,24 +56,40 @@ body .header-logo a{
     font-size: 14px;
 }
 
-#featured-slider{
-    margin-bottom:30px;
+#featured-slider {
+    margin-bottom: 30px;
 }
-#chic-products{
-    padding:0 40px;
+
+#chic-products {
+    padding: 0 40px;
 }
-.chic-title{
+
+.chic-title {
     font-family: 'Kalam';
     font-size: 52px;
     text-decoration: inherit;
     text-transform: uppercase;
     transform: rotate(-2deg);
-    margin:30px 40px;
-    text-align:center;
+    margin: 30px 40px;
+    text-align: center;
     color: #9d4c64 !important;
     line-height: 48px;
 }
-#chic-products ul.products li.product{
-    background: #f6f6f6;
+
+#chic-products ul.products li.product {
+    background: #f6f6f6 !important;
     padding-bottom: 20px;
+}
+
+/* Modif couleur des textes */
+.post-footer,
+.post-footer>a,
+.post-date,
+.post-contents,
+.related-post-date,
+.post-author,
+.woocommerce-result-count,
+.post-content>p,
+.rpwwt-post-categories {
+    color: #4d4d4d !important;
 }
